# Kognitor

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
cmake/: bootstrap.cmake  microstd.cmake  oled_display.cmake
cmake/toolchain/: avr.cmake
doc/: README.md
include/: app.h  bits.h  concepts.h  ui.h  wait.h
include/com/: twi.h  usart.h
include/component/: lcd_i2c.h  timer.h
include/component/display/: ssd1306.h
include/component/sensor/: BasicSensor.h  dht11.h  ir.h  joystick.h  linetracker.h  mic.h  tilt.h
include/mcu/: ADC.h  Interrupt.h  PartType.h  Pin.h  PinBit.h  Port.h  Reg.h  Timer.h  io.h
include/mcu/dev/: atmega168a.h  atmega168pa.h  atmega328.h  atmega328p.h  atmega328pb.h  atmega48a.h  atmega48pa.h  atmega88a.h  atmega88pa.h
include/types/: bitarray.h  bool_type.h  collection.h  conditional.h  count_to_type.h  optional.h  sensor_pin.h  sensors.h  traits.h
include/util/: pulse.h
src/: CMakeLists.txt  app.cpp  main.cpp  ui.cpp
src/com/: CMakeLists.txt  usart.cpp
tools/: upload.py
